--- a/entrypoints/main.css
+++ b/entrypoints/main.css
@@ -1,44 +1,28 @@
 @unocss all;
 
-/* layer: theme */
-:root,
-:host {
-	--font-sans:
-		ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-	--font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-	--default-font-family: var(--font-sans);
-	--default-monoFont-family: var(--font-mono);
-	--spacing: 0.25rem;
-	--radius-lg: 0.5rem;
-	--fontWeight-bold: 700;
-	--radius-md: 0.375rem;
-	--fontWeight-medium: 500;
-	--default-transition-timingFunction: cubic-bezier(0.4, 0, 0.2, 1);
-	--default-transition-duration: 150ms;
-	--fontWeight-semibold: 600;
-	--tracking-tight: -0.025em;
-	--leading-none: 1;
-	--colors-stone-100: oklch(97% 0.001 106.424);
-	--colors-blue-600: oklch(54.6% 0.245 262.881);
-	--colors-white: #fff;
-	--colors-gray-900: oklch(21% 0.034 264.665);
-	--colors-gray-600: oklch(44.6% 0.03 256.802);
-	--colors-red-100: oklch(93.6% 0.032 17.717);
-	--colors-red-800: oklch(44.4% 0.177 26.899);
-	--colors-green-100: oklch(96.2% 0.044 156.743);
-	--colors-green-800: oklch(44.8% 0.119 151.328);
-	--colors-gray-500: oklch(55.1% 0.027 264.364);
-	--colors-gray-50: oklch(98.5% 0.002 247.839);
-	--text-2xl-fontSize: 1.5rem;
-	--text-2xl-lineHeight: 2rem;
-	--text-sm-fontSize: 0.875rem;
-	--text-sm-lineHeight: 1.25rem;
-	--text-xs-fontSize: 0.75rem;
-	--text-xs-lineHeight: 1rem;
-}
-
 body {
 	font-synthesis-weight: none;
 	text-rendering: optimizeLegibility;
+}
+
+.button {
+	@apply inline-flex items-center justify-center gap-2 text-sm h-9 rounded-md px-3 border border-stone-300;
+	white-space: nowrap;
+	cursor: pointer;
+}
+
+.button:hover {
+	@apply bg-stone-200;
+}
+
+.button:active {
+	@apply bg-stone-300 border-stone-300;
+}
+
+.button.is-active {
+	@apply bg-stone-300 border-stone-400;
+}
+
+.button.is-active:hover {
+	@apply bg-stone-300 border-stone-400;
 }
